# wick

./: Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json
src/: cli_parser.rs  cli_utils.rs  consts.ts  formatting.ts  main.rs  program.ts  requests.ts  wick.ts
