[package]
name = "wick"
version = "0.1.0"
edition = "2021"
authors = ["Max Gilmour"]
repository = "https://github.com/maxgmr/wick"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive", "string"] }
color-eyre = "0.6"
inquire = "0.7"

[build-dependencies]
vergen = { version = "9.0", features = ["build", "si"] }
